<resources>
    <string name="app_name">Equation Buddy</string>
    <string name="gross_ratio">Gross Ratio</string>
    <string name="current_ratio">Current Ratio</string>
    <string name="search">Search...</string>
    <string name="searchButton">Search</string>
    <string name="allButton">All Equations</string>
    <string name="updateButton">Update Equations</string>
    <string name="addButton">Add new equation</string>
    <string name="addInputeEquation">Equation here</string>
    <string name="addInputCourse">Course name</string>
    <string name="addInputDescription">Description</string>
    <string name="addInputName">Equation Name</string>
    <string name="addTextFormat"></string>
    <string name="addButtonAdd">Add</string>
    <string name="allButtonUpdate">update</string>
    <string name="updateButtonUpdate">Update</string>
    <string name="updateButtonDelete">Delete</string>
    <string name="viewequationButtonCompute">Compute</string>
    <string name="viewequationInputValues">Input values separated by commas</string>
    <string name="signout">Sign out</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_error">Unknwon error</string>
    <string name="unknown_sign_in_response">Unknown</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deleted">Delted</string>
    <string name="failed">Failed</string>
    <string name="equationExists">Equation name already exists</string>
    <string name="equationAdded">Added</string>
    <string name="equationNameEmpty">Please enter a equation name</string>
    <string name="noDescription">No description provided</string>
    <string name="noCourse">No course name provided</string>
    <string name="noEquation">No equation provided</string>
    <string name="noValues">No values entered</string>
    <string name="ParseException">Parse Error</string>
</resources>
