<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/addInputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addInputName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addTextFormat" />

    <EditText
        android:id="@+id/addInputDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addInputDescription"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addInputName" />

    <EditText
        android:id="@+id/addInputCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addInputCourse"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addInputDescription" />

    <EditText
        android:id="@+id/addInputEquation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addInputeEquation"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addInputCourse" />

    <TextView
        android:id="@+id/addTextFormat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addTextFormat"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/addInputName"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/addInputName"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9557292" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.018229166" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <Button
        android:id="@+id/addButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButtonAdd"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/addInputEquation"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/addInputEquation"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addInputEquation"
        android:onClick="setData"/>
</android.support.constraint.ConstraintLayout>