<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <EditText
        android:id="@+id/mainSearchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/search"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/mainSearchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        app:layout_constraintLeft_toRightOf="@+id/mainSearchBox"
        android:layout_marginLeft="0dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintBottom_toBottomOf="@+id/mainSearchBox"
        android:layout_marginBottom="0dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/mainAllButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/allButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/mainSearchBox"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/mainSearchBox"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mainSearchBox"
        app:layout_constraintHorizontal_bias="0.504"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/mainUpdateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/updateButton"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/mainAllButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/mainSearchBox"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/mainSearchBox"
        app:layout_constraintHorizontal_bias="0.504"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/mainAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mainUpdateButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/mainSearchBox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/mainSearchBox"
        app:layout_constraintHorizontal_bias="0.504"
        android:onClick="onClick"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.039138943" />
</android.support.constraint.ConstraintLayout>